# GenMeasure

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/routers/: analysis.py  quiz.py  simulation.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: AnalysisView.tsx  QuizGenerator.tsx  ResultsView.tsx  SimulationView.tsx
student_persona/: README.md  extract_from_personaHub.py  middle_students.csv  others.csv  primary_students.csv  undergraduate_students.csv
student_persona/tests/: test_extract_from_personaHub.py
